# rust-rocket

./: .gitignore  Cargo.toml  Rocket.toml  diesel.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_init.rs  main.rs
migrations/2025-03-11-162036_init/: up.sql
src/: main.rs  schema.rs  setup.rs
src/lib/builders/: api_response.rs
src/models/: api_response.rs  mod.rs  user.rs
