[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
chrono = { version = "0.4.40", features = ["serde"] }
