[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tokio = "1.44.0"

[workspace]
members = [".", "migration"]
